fix bug for frame

--- a/LJCusomSegemtTabPagerView/LJCusomSegemtTabPagerView/Base.lproj/Main.storyboard
+++ b/LJCusomSegemtTabPagerView/LJCusomSegemtTabPagerView/Base.lproj/Main.storyboard
@@ -39,6 +39,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fsj-Wr-yxO">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" red="1" green="0.99607843139999996" blue="0.71764705880000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="oHt-qq-eBI" detailTextLabel="siW-et-Lmf" style="IBUITableViewCellStyleValue1" id="bjm-7U-9eL">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
@@ -63,6 +64,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.87471731090000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -71,7 +73,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="fsj-Wr-yxO" secondAttribute="trailing" id="H0k-1Z-Ff5"/>
                             <constraint firstItem="fsj-Wr-yxO" firstAttribute="leading" secondItem="M5X-zV-Hrd" secondAttribute="leading" id="Uge-fL-2pA"/>
